# nesting

./: .gitignore  flake.nix  meson.build
src/: OpenglCallbacks.cpp  OpenglCallbacks.h  Piece.cpp  Piece.h  Problem.h  global.cpp  global.h  imageProcessing.cpp  imageProcessing.h  main.cpp
